# simplex-method

./: .gitignore  ACKNOWLEDGEMENTS.md  AList.hs  Abstract_Linear_Poly.hs  Arith.hs  ChangeLog.md  FSet.hs  Finite_Map.hs  Fun.hs  GCD.hs  Groups_List.hs  LICENSE  Linear_Poly_Maps.hs  List.hs  Makefile  Map.hs  Mapping.hs  Multiset.hs  NOTES.md  Option.hs  Product_Type.hs  QDelta.hs  RBT.hs  RBT_Impl.hs  README.md  Rat.hs  Set.hs  Simplex.hs  Simplex_Algebra.hs  Simplex_Auxiliary.hs  Sum_Type.hs  Tests.hs  Util.hs  flake.nix  fourmolu.yaml  linear-simplex-haskell.cabal  package.yaml  simplex-haskell.cabal  simplex-method.cabal  stack.yaml
.github/workflows/: haskell-nix.yml  haskell-stack.yml  haskell.yml  update-flake.yml
optimized/: Simplex.hs  Tests.hs  Util.hs
simplex-haskell/: ChangeLog.md  LICENSE  package.yaml  simplex-haskell.cabal  stack.yaml
simplex-haskell/src/SimplexHaskell/: Simplex.hs  Util.hs
src/: Simplex.hs  SoplexTranslator.hs  Tester.hs
src/Linear/: Prettify.hs  Simplex.hs  Type.hs  Util.hs
src/Linear/CanonicalForm/: Solver.hs  Util.hs
src/Linear/Constraint/: Types.hs  Util.hs
src/Linear/Constraint/Generic/: Types.hs
src/Linear/Constraint/Linear/: Types.hs  Util.hs
src/Linear/Constraint/Simple/: Types.hs  Util.hs
src/Linear/Expr/: Types.hs  Util.hs
src/Linear/Simplex/: DeriveBounds.hs  Prettify.hs  Simplex.hs  Standardize.hs  Types.hs  Util.hs
src/Linear/Simplex/Solver/: TwoPhase.hs  Types.hs
src/Linear/SlackForm/: Types.hs  Util.hs
src/Linear/System/: Types.hs
src/Linear/System/Linear/: Types.hs  Util.hs
src/Linear/System/Simple/: Types.hs  Util.hs
src/Linear/Tableau/: Types.hs
src/Linear/Term/: Types.hs  Util.hs
src/Linear/Var/: Types.hs  Util.hs
test/: Spec.hs  TestFunctions.hs  TestUtil.hs
test/Linear/CanonicalForm/: UtilSpec.hs
test/Linear/Constraint/Simple/: UtilSpec.hs
test/Linear/Expr/: UtilSpec.hs
test/Linear/Simplex/: TypesSpec.hs  UtilSpec.hs
test/Linear/Simplex/Solver/: TwoPhaseSpec.hs
test/Linear/SlackForm/: UtilSpec.hs
test/Linear/System/Simple/: UtilSpec.hs
test/Linear/Tableau/: TypesSpec.hs
test/Linear/Term/: UtilSpec.hs
test/Linear/Var/: UtilSpec.hs
