name:           simplex-method
version:        0.2.0.0
synopsis:       Implementation of the two-phase simplex method in exact rational arithmetic
description:    Please see the README on GitHub at <https://github.com/rasheedja/simplex-method#readme>
category:       Math, Maths, Mathematics, Optimisation, Optimization, Linear Programming
homepage:       https://github.com/rasheedja/simplex-method#readme
bug-reports:    https://github.com/rasheedja/simplex-method/issues
author:         Junaid Rasheed
maintainer:     jrasheed178@gmail.com
copyright:      BSD-3
license:        BSD3
license-file:   LICENSE
cabal-version:  1.12
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/rasheedja/simplex-method

library
  exposed-modules:
      Linear.Simplex.Prettify
      Linear.Simplex.Solver.TwoPhase
      Linear.Simplex.Types
      Linear.Simplex.Util
  other-modules:
      Paths_simplex_method
  hs-source-dirs:
      src
  default-extensions:
      DataKinds
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      DisambiguateRecordFields
      DuplicateRecordFields
      ExtendedDefaultRules
      FlexibleContexts
      GeneralizedNewtypeDeriving
      LambdaCase
      NamedFieldPuns
      OverloadedLabels
      OverloadedRecordDot
      OverloadedStrings
      RecordWildCards
      TemplateHaskell
      TupleSections
      TypeApplications
      QuasiQuotes
  build-depends:
      base >=4.14 && <5
    , containers >= 0.6.7 && < 0.8
    , generic-lens >= 2.2.2 && < 2.3
    , text >= 2.0.2 && < 2.2
    , lens >= 5.3.5 && < 5.4
    , time >= 1.12.2 && < 1.15
    , monad-logger >= 0.3.42 && < 0.4
    , QuickCheck >= 2.16.0 && < 2.17
  default-language: Haskell2010

test-suite simplex-haskell-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Linear.Simplex.Solver.TwoPhaseSpec
      Paths_simplex_method
  hs-source-dirs:
      test
  default-extensions:
      DataKinds
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      DisambiguateRecordFields
      DuplicateRecordFields
      ExtendedDefaultRules
      FlexibleContexts
      GeneralizedNewtypeDeriving
      LambdaCase
      NamedFieldPuns
      OverloadedLabels
      OverloadedRecordDot
      OverloadedStrings
      RecordWildCards
      TemplateHaskell
      TupleSections
      TypeApplications
      QuasiQuotes
  build-depends:
      base >=4.14 && <5
    , simplex-method
    , containers >= 0.6.7 && < 0.8
    , generic-lens >= 2.2.2 && < 2.3
    , text >= 2.0.2 && < 2.2
    , lens >= 5.3.5 && < 5.4
    , time >= 1.12.2 && < 1.15
    , monad-logger >= 0.3.42 && < 0.4
    , QuickCheck >= 2.16.0 && < 2.17
    , hspec >= 2.11.12 && < 2.12
    , hspec-expectations >= 0.8.3 && < 0.9
    , interpolatedstring-perl6 >= 1.0.2 && < 1.1
  default-language: Haskell2010
